--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "node test/apartment"
   },
   "dependencies": {
-    "css": "2.2.1",
+    "pjcss": "2.2.1",
     "get-stdin": "5.0.1",
     "lodash": "3.10.1",
     "minimist": "1.2.0"
