--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apartment",
+  "name": "xapartment",
   "description": "Remove properties from a stylesheet",
   "version": "1.1.1",
   "homepage": "https://github.com/bevacqua/apartment",
